implemented first attempt at rendering <hover-text/> (could use some cleanup)